--- a/code/frontend/src/pages/layout/Layout.module.css
+++ b/code/frontend/src/pages/layout/Layout.module.css
@@ -22,7 +22,6 @@
 }
 
 .headerTitle {
-    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
@@ -47,7 +46,7 @@
     gap: 4px;
     width: 86px;
     height: 32px;
-    background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #0F6CBD 33.63%, #2D87C3 70.31%, #8DDDD8 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #e11f1c 33.63%, #e96662 70.31%, #e11f1c 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
     border-radius: 4px;
     flex: none;
     order: 1;
@@ -62,7 +61,6 @@
 }
 
 .shareButtonText {
-    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -73,7 +71,6 @@
 }
 
 .urlTextBox {
-    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -106,7 +103,6 @@
 }
 
 .copyButtonText {
-    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
